加入排查错误的程序checkerr